Fix cut off dates in play table on details page

--- a/goodplays/static/style.css
+++ b/goodplays/static/style.css
@@ -199,7 +199,7 @@ td.released, td.started, td.finished {
 body:not(.small-screen) td.released,
 body:not(.small-screen) td.started,
 body:not(.small-screen) td.finished {
-    width: 80px;
+    width: 83px;
 }
 
 td.art {
